Add stdin to the documentation as well.

--- a/src/cloudabi-run/cloudabi-run.1
+++ b/src/cloudabi-run/cloudabi-run.1
@@ -107,6 +107,7 @@ processes:
 .It Cm "tag:nuxi.nl,2015:cloudabi/fd: int"
 Exposes a file descriptor by decimal file descriptor number,
 or the special values
+.Dq Li stdin ,
 .Dq Li stdout
 and
 .Dq Li stderr .
